tooling/nargo_cli/tests/snapshots/execution_success/nested_array_dynamic_simple/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) {
    let array: [[(Field, [Field; 1], [Field; 1]); 1]; 1] = [[(1, [2], [3])]];
    let fetched_value: [(Field, [Field; 1], [Field; 1]); 1] = array[x - 3];
    assert(fetched_value[0].0 == 1);
    assert(fetched_value[0].1[0] == 2);
    assert(fetched_value[0].2[0] == 3);
}
