tooling/nargo_cli/tests/snapshots/execution_success/nested_array_dynamic_simple/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _10",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "EXPR [ (1, _0) (-1, _1) -3 ]",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "EXPR [ (-1, _2) 1 ]",
    "EXPR [ (-1, _3) 2 ]",
    "EXPR [ (-1, _4) 3 ]",
    "INIT (id: 0, len: 3, witnesses: [_2, _3, _4])",
    "EXPR [ (3, _1) (-1, _5) 0 ]",
    "MEM (id: 0, read at: EXPR [ (1, _5) 0 ], value: EXPR [ (1, _6) 0 ]) ",
    "EXPR [ (1, _5) (-1, _7) 1 ]",
    "MEM (id: 0, read at: EXPR [ (1, _7) 0 ], value: EXPR [ (1, _8) 0 ]) ",
    "EXPR [ (1, _5) (-1, _9) 2 ]",
    "MEM (id: 0, read at: EXPR [ (1, _9) 0 ], value: EXPR [ (1, _10) 0 ]) ",
    "EXPR [ (1, _6) -1 ]",
    "EXPR [ (1, _8) -2 ]",
    "EXPR [ (1, _10) -3 ]"
  ],
  "debug_symbols": "nZJNjsMgDIXv4jULID/T9CqjUUQSp0JCJKJQaRT17uM4odMuKlXZvAfYn7HACwzYpUtr/Thd4fy9QBesc/bSuqk30U6eTpe7gLxtY0CkI3iKEzWbgD7C2SfnBNyMS5x0nY1njyZQVApAP5BTwdE6XFd38U/L96iSeoeVLB549Tlf5stVWR3hqybzJ32Eb+qd1/oIr4sHX7/yP7QzvQ0vPwaKEgVo1oK1ZK1Ya9Yv1hNrw6rkZhutNlwRX5BRgZKMKqwPeDPBms7hPh9j8v3TuMTfOUfyQM1h6nFIAddGOUat/wE=",
  "file_map": {
    "50": {
      "source": "fn main(x: u32) {\n    // x = 3\n    let array: [[(Field, [Field; 1], [Field; 1]); 1]; 1] = [[(1, [2], [3])]];\n\n    let fetched_value = array[x - 3];\n    assert(fetched_value[0].0 == 1);\n    assert(fetched_value[0].1[0] == 2);\n    assert(fetched_value[0].2[0] == 3);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
